--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
-<html>
+<!DOCTYPE html>
+<html lang="ru">
      <head>
-        <title> Наименование сайта </title>
+        <title>Botanica. Букеты в Петербурге.</title>
+        <link href="" rel="stylesheet">
     </head>
 
     <body>
+    
+    <main>
+
+    </main>
         
     </body>
 </html>
