корректировка после проверки валидатора

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
         <title>Botanica. Букеты в Петербурге</title>
         <link href="style.css" rel="stylesheet">
-        <meta charset="UTF8">
+        <meta charset="utf-8">
         <meta name="description" content="Букеты в Санкт-Петербурге">
-        <meta name="keywords" content="цветы, букеты, Санкт-Петербург, Петербург, цветочные композиции"
+        <meta name="keywords" content="цветы, букеты, Санкт-Петербург, Петербург, цветочные композиции">
 </head>
 
 <body>
@@ -50,17 +50,17 @@
         <section>
             <h2 class="visually-hidden">Наши преимущества</h2>
         <div>
-            <img src="images/main/delivery.svg" width="82" height="52">
+            <img src="images/main/delivery.svg" width="82" height="52" alt="векторный грузовичок">
              <h3>Быстрая доставка</h3>
              <p>Можем собрать букет и передать его в доставку всего за час.</p>
         </div>
         <div>
-            <img src="images/main/bouquet.svg" width="52" height="52">
+            <img src="images/main/bouquet.svg" width="52" height="52" alt="векторный букет">
             <h3> Всегда свежие цветы </h3>
             <p>Тщательно следим за состоянием цветов, а опытные флористы отбирают для букетов каждый цветок.</p>
         </div>
         <div>
-            <img src="images/main/photo.svg" width="58.6" height="52">
+            <img src="images/main/photo.svg" width="59" height="52" alt="векторный фотоаппарат">
             <h3>Отправляем фото цветов</h3>
             <p>Перед доставкой сделаем фотографию букета и отправим вам.</p>
         </div>
@@ -82,7 +82,7 @@
     </section>
   -->       
     
-    <section class="catalogue"
+    <section class="catalogue">
     <div class="wedding-bouqets">
         <a href="">
             <h2>Свадебные букеты</h2>
@@ -94,7 +94,7 @@
         <a href="">
             <h2>Букеты с пионами</h2>
             <p>Букеты с сезонными пионами</p>
-            <img src="images/main/peony.jpg"  width="387" height="442" alt="Букет из пионов"
+            <img src="images/main/peony.jpg"  width="387" height="442" alt="Букет из пионов">
         </a>
     </div>
     <div class="assortment">
@@ -104,6 +104,7 @@
             <img src="images/main/assortment.jpg"  width="387" height="442" alt="Авторский букет из редких цветов">
         </a>
     </div>  
+    </section>
 
     <section class="sale">
         <h2>Cкидка 10% на первый заказ</h2>
@@ -116,22 +117,22 @@
     <section class="order-steps">
         <h2>4 шага к идеальному букету</h2>
         <div class="step1"> 
-            <img src="images/main/order.svg">
+            <img src="images/main/order.svg" alt="компьютер">
             <h3>Заказ</h3>
             <p>Выберите понравившийся букет из каталога и оформите заказ</p>
         </div>
         <div class="step2">
-            <img src="images/main/details.svg">
+            <img src="images/main/details.svg" alt="консультант">
             <h3>Уточнение деталей</h3>
             <p>Наш флорист позвонит вам после заказа, чтобы уточнить детали</p>
         </div>
         <div class="step3">
-            <img src="images/main/payment.svg">
+            <img src="images/main/payment.svg" alt="банковская карта">
             <h3>Оплата</h3>
             <p>Оплатить заказ можно онлайн на сайте или при получении</p>
         </div>
         <div class="step4">
-            <img src="images/main/delivery.svg">
+            <img src="images/main/delivery.svg" alt="грузовичок">
             <h3>Доставка</h3>
             <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
         </div>
@@ -141,13 +142,13 @@
         <h2>Cледите за нашими новостями</h2>
         <p>Подписывайтесь на наши соцсети и узнавайте о новинках и акциях первыми</p>
             <a href="">
-                <img src="images/main/instagram_icon.svg">
+                <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
             </a>
             <a href="">
-                <img src="images/main/facebook_icon.svg">
+                <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
             </a>
             <a href="">
-                <img src="images/main/twitter_icon.svg">
+                <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
             </a>
         
         <figure>
@@ -226,14 +227,14 @@
                 </li>
             </ul>
             <a href="">
-                <img src="images/main/instagram_icon.svg">
+                <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
             </a>
             <a href="">
-                <img src="images/main/facebook_icon.svg">
+                <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
             </a>
             <a href="">
-                <img src="images/main/twitter_icon.svg">
-                </a>
+                <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
+            </a>
         </nav>
 </footer>
 
