Доработка футера и блока с контактами

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </header>
     
     <main>
-    <section>
-        <div class="introduction">
+    <section class="introduction"
+        <div class="introduction-text">
             <h1>Авторские букеты <span class="italic">в Петербурге</span></h1>
             <p>Оригинальные свежие букеты с доставкой по всему городу</p>
             <a href="" class="button">Cмотреть каталог</a>
-        </div>        
+        </div>
         <div class="introduction-image">
             <img src="images/main/tulips.jpg" width="386" height="404" alt="Букет тюльпанов">
             <img src="images/main/roses.jpg" width="387" height="420" alt="Авторская композиция из сезонных цветов">
@@ -114,17 +114,17 @@
             <a href="">
                 <h2>Выбрать букет</h2>        
                 <p>Букеты в ассортименте</p>
-                <img src="images/main/assortment.jpg"  width="387" height="442" alt="Авторский букет из редких цветов">
+                <img src="images/main/assortment.jpg" width="387" height="442" alt="Авторский букет из редких цветов">
             </a>
         </div>  
     </section>
 
     <section class="sale">
-        <h2>Cкидка 10% на первый заказ</h2>
-        <p>Если заказываете у нас букет впервые - при оформлении заказа введите промокод "Botanica21" и получите скидку 10%.</p>
-        <figure>
+        <div class="sale-image">
             <img src="images/main/sale.jpg" width="590" height="391" alt="Композиция из роз и гвоздик с эвкалиптом">
-        </figure>
+        </div>
+        <h2>Cкидка 10% <br>на первый заказ</h2>
+        <p>Если заказываете у нас букет впервые - при оформлении заказа введите промокод "Botanica21" и получите скидку 10%.</p>
     </section>
 
     <section class="order-steps">
@@ -194,12 +194,13 @@
     <section class="contacts">
         <img src="images/main/map.jpg" width="1440" height="644" alt="Фрагмент карты с нашим местоположением">
         <h2 class="visually-hidden">Контакты</h2>
-        <h3>Мы ждем вас</h3>
+        <div class="contacts-text"> 
+        <h2>Мы ждем вас</h2>
             <ul>
                 <li>
                     <p>Приходите к нам:</p>
-                    <address>г.Санкт-Петербург, <br>
-                    ул.Большая Конюшенная, 19</address>
+                    <p>г.Санкт-Петербург, <br>
+                    ул.Большая Конюшенная, 19</p>
                 </li>
                 <li>
                     <p>Режим работы:</p>
@@ -213,14 +214,15 @@
                     <p>Напишите нам:</p>
                     <a href="mailto:info@botanica.ru">info@botanica.ru</a>
                 </li>
-            </ul>       
+            </ul>  
+        </div>     
     </section>
     </main>
 
     <footer> 
         <nav>
             <a>
-            <img src="images/main/logo.svg" width="100" alt="Логотип Botanica">
+            <img src="images/main/logo2.svg" width="100" alt="Логотип Botanica">
             </a>
             <ul>
                 <li>
