--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
      
 <head>
         <title>Botanica. Букеты в Петербурге</title>
-        <link href="style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/normalize.css"
+        <link rel="stylesheet" type="text/css" href="css/style.css" >
         
         <meta charset="utf-8">
         <meta name="description" content="Букеты в Санкт-Петербурге">
