Оформлена боксовая разметка до новостного блока. Переделан навигационный блок.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 
 <body>
     <header class="page-header">
-        <nav class="main-menu">
+        <nav class="menu-container">
+            <div class="logo">
+                <a href="">
+                    <img src="images/main/logo.svg" width="100" alt="Логотип Botanica">
+                </a>
+            </div>
             <ul class="navigation-list">
                 <li class="navigation-item">
                     <a>Каталог</a>
@@ -29,11 +34,6 @@
                 <li class="navigation-item">
                     <a>Отзывы</a>
                 </li>
-            </ul>
-            <a class="logo" href="">
-                <img src="images/main/logo.svg" width="100" alt="Логотип Botanica">
-            </a>
-            <ul class="navigation-list">
                 <li class="navigation-item">
                     <a>Спецпредложения</a>
                 </li>
@@ -109,58 +109,59 @@
         </section>
 
         <section class="catalogue">
-            <div class="catalogue wedding-bouqets">
-                <a href="">
+            <div class="wedding">
+                <a class="catalogue-link" href="">
                     <h2>Свадебные букеты</h2>
                     <p>Букеты для невест</p>
-                    <img src="images/main/wedding.jpg" width="387" height="442" alt="Свадебный букет">
                 </a>
             </div>
-            <div class="catalogue peonies">
-                <a href="">
+            <div class="peonies">
+                <a class="catalogue-link" href="">
                     <h2>Букеты с пионами</h2>
                     <p>Букеты с сезонными пионами</p>
-                    <img src="images/main/peony.jpg" width="387" height="442" alt="Букет из пионов">
                 </a>
             </div>
-            <div class="catalogue other">
-                <a href="">
+            <div class="other">
+                <a class="catalogue-link" href="">
                     <h2>Выбрать букет</h2>
                     <p>Букеты в ассортименте</p>
-                    <img src="images/main/assortment.jpg" width="387" height="442" alt="Авторский букет из редких цветов">
                 </a>
             </div>
         </section>
 
         <section class="sale">
+            <div class="sale-text">
+                <h2>Cкидка 10% <br>на первый заказ</h2>
+                <p>Если заказываете у нас букет впервые - при оформлении заказа введите промокод "Botanica2021" и получите скидку 10%.</p>
+            </div>
             <div class="sale-image">
                 <img src="images/main/sale.jpg" width="590" height="391" alt="Композиция из роз и гвоздик с эвкалиптом">
             </div>
-            <h2>Cкидка 10% <br>на первый заказ</h2>
-            <p>Если заказываете у нас букет впервые - при оформлении заказа введите промокод "Botanica21" и получите скидку 10%.</p>
         </section>
 
-        <section class="order-steps">
+        <section class="order-instruction">
             <h2>4 шага к идеальному букету</h2>
-            <div class="step1">
-                <img src="images/main/order.svg" alt="компьютер">
-                <h3>Заказ</h3>
-                <p>Выберите понравившийся букет из каталога и оформите заказ</p>
-            </div>
-            <div class="step2">
-                <img src="images/main/details.svg" alt="консультант">
-                <h3>Уточнение деталей</h3>
-                <p>Наш флорист позвонит вам после заказа, чтобы уточнить детали</p>
-            </div>
-            <div class="step3">
-                <img src="images/main/payment.svg" alt="банковская карта">
-                <h3>Оплата</h3>
-                <p>Оплатить заказ можно онлайн на сайте или при получении</p>
-            </div>
-            <div class="step4">
-                <img src="images/main/delivery.svg" alt="грузовичок">
-                <h3>Доставка</h3>
-                <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
+            <div class="order-steps">
+                <div class="step">
+                    <img src="images/main/order.svg" alt="компьютер">
+                    <h3>Заказ</h3>
+                    <p>Выберите понравившийся букет из каталога и оформите заказ</p>
+                </div>
+                <div class="step">
+                    <img src="images/main/details.svg" alt="консультант">
+                    <h3>Уточнение деталей</h3>
+                    <p>Наш флорист позвонит вам после заказа, чтобы уточнить детали</p>
+                </div>
+                <div class="step">
+                    <img src="images/main/payment.svg" alt="банковская карта">
+                    <h3>Оплата</h3>
+                    <p>Оплатить заказ можно онлайн на сайте или при получении</p>
+                </div>
+                <div class="step">
+                    <img src="images/main/delivery.svg" alt="грузовичок">
+                    <h3>Доставка</h3>
+                    <p>Курьер позвонит за час до прибытия и доставит заказ вовремя</p>
+                </div>
             </div>
         </section>
 
