Спозиционирован блок с картой. Боксовые блоки адаптированы с учетом возможной переполняемости.

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
         </section>
 
-        <section class="order-instruction">
+        <section class="order-steps-container">
             <h2>4 шага к идеальному букету</h2>
             <div class="order-steps">
                 <div class="step">
@@ -166,68 +166,74 @@
         </section>
 
         <section class="news">
-            <h2>Cледите за нашими новостями</h2>
-            <p>Подписывайтесь на наши соцсети и узнавайте о новинках и акциях первыми</p>
-            <a href="">
-                <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
-            </a>
-            <a href="">
-                <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
-            </a>
-            <a href="">
-                <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
-            </a>
-            <figure>
+            <div class="news-text">
+                <h2>Cледите за нашими новостями</h2>
+                <p>Подписывайтесь на наши соцсети и узнавайте <br> о новинках и акциях первым.</p>
+                <a class="icon" href="">
+                    <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
+                </a>
+                <a class="icon" href="">
+                    <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
+                </a>
+                <a class="icon" href="">
+                    <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
+                </a>
+            </div>
+            <div class="news-image">
                 <img src="images/main/news1.jpg" alt="Букет в вазе">
-            </figure>
-            <figure>
+            </div>
+            <div class="news-image">
                 <img src="images/main/news2.jpg" alt="Букет с розовыми розами">
-            </figure>
-            <figure>
+            </div>
+            <div class="news-image">
                 <img src="images/main/news3.jpg" alt="Букет с розовыми гвоздиками в крафтовой бумаге">
-            </figure>
+            </div>
         </section>
 
-        <section class="reference">
+        <section class="reference-container">
             <h2>Отзывы</h2>
-            <blockquote>
-                <p>Всё очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!
-                </p>
-                <cite>Марина</cite>
-            </blockquote>
-            <blockquote>
-                <p>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</p>
-                <cite>Татьяна</cite>
-            </blockquote>
-            <blockquote>
-                <p>Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!</p>
-                <cite>Ольга</cite>
-            </blockquote>
+            <div class="references">
+                <blockquote class="reference-item">
+                    <p>Всё очень понравилось! Быстрое оформление заказа, выбор удобного времени доставки. Всем большое спасибо!
+                    </p>
+                    <cite>Марина</cite>
+                </blockquote>
+                <blockquote class="reference-item">
+                    <p>Внимательные флористы, вежливые. Магазин находится прям рядом с метро. Букет очень понравился, буду еще заказывать!</p>
+                    <cite>Татьяна</cite>
+                </blockquote>
+                <blockquote class="reference-item">
+                    <p>Выбор букетов на любой вкус и цену. Бывают хорошие скидки, а флористы всегда помогут и точно соберут красивый букет!</p>
+                    <cite>Ольга</cite>
+                </blockquote>
+            </div>
         </section>
 
         <section class="contacts">
-            <img src="images/main/map.jpg" width="1440" height="644" alt="Фрагмент карты с нашим местоположением">
-            <h2 class="visually-hidden">Контакты</h2>
-            <div class="contacts-text">
-                <h2>Мы ждем вас</h2>
-                <ul>
-                    <li>
+            <div class="contact-card">
+                <h2 class="visually-hidden">Контакты</h2>
+                <h3 class="contact-card-title">Мы ждем вас</h3>
+                <ul class="contact-card-items">
+                    <li class="contact-card-item">
                         <p>Приходите к нам:</p>
                         <p>г.Санкт-Петербург, <br> ул.Большая Конюшенная, 19</p>
                     </li>
-                    <li>
+                    <li class="contact-card-item">
                         <p>Режим работы:</p>
-                        <p>Пн-Вск, с 09:00 до 20:00</p>
+                        <p>Пн-Вск, с 09-00 до 20-00</p>
                     </li>
-                    <li>
+                    <li class="contact-card-item">
                         <p>Позвоните нам:</p>
-                        <a href="tel:+78129834719">+7 (812) 983-47-19</a>
+                        <a class="contact-card-link" href="tel:+78129834719">+7 (812) 983-47-19</a>
                     </li>
-                    <li>
+                    <li class="contact-card-item">
                         <p>Напишите нам:</p>
-                        <a href="mailto:info@botanica.ru">info@botanica.ru</a>
+                        <a class="contact-card-link" href="mailto:info@botanica.ru">info@botanica.ru</a>
                     </li>
                 </ul>
+            </div>
+            <div class="map">
+                <img src="images/main/map.jpg" width="1440" height="644" alt="Фрагмент карты с нашим местоположением">
             </div>
         </section>
     </main>
@@ -237,7 +243,7 @@
             <a>
                 <img src="images/main/logo2.svg" width="100" alt="Логотип Botanica">
             </a>
-            <ul>
+            <ul class="">
                 <li>
                     <a href="">Каталог</a>
                 </li>
