Стилизован футер сайта

--- a/index.html
+++ b/index.html
@@ -239,36 +239,38 @@
     </main>
 
     <footer>
-        <nav>
-            <a>
+        <nav class="footer-container">
+            <a class="footer-logo">
                 <img src="images/main/logo2.svg" width="100" alt="Логотип Botanica">
             </a>
-            <ul class="">
+            <ul class="footer-list">
                 <li>
-                    <a href="">Каталог</a>
+                    <a class="footer-list-item" href="">Каталог</a>
                 </li>
                 <li>
-                    <a href="">Доставка и оплата</a>
+                    <a class="footer-list-item" href="">Доставка и оплата</a>
                 </li>
                 <li>
-                    <a href="#">Отзывы</a>
+                    <a class="footer-list-item" href="">Отзывы</a>
                 </li>
                 <li>
-                    <a href="">Спецпредложения</a>
+                    <a class="footer-list-item" href="">Спецпредложения</a>
                 </li>
                 <li>
-                    <a href="">Контакты</a>
+                    <a class="footer-list-item" href="">Контакты</a>
                 </li>
             </ul>
-            <a href="">
-                <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
-            </a>
-            <a href="">
-                <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
-            </a>
-            <a href="">
-                <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
-            </a>
+            <div class="icons">
+                <a class="footer-icon" href="">
+                    <img src="images/main/instagram_icon.svg" alt="иконка инстаграм">
+                </a>
+                <a class="footer-icon" href="">
+                    <img src="images/main/facebook_icon.svg" alt="иконка фэйсбук">
+                </a>
+                <a class="footer-icon" href="">
+                    <img src="images/main/twitter_icon.svg" alt="иконка твиттер">
+                </a>
+            </div>
         </nav>
     </footer>
 
