выравнивание по центру в навигационном блоке в шапке сайта

--- a/index.html
+++ b/index.html
@@ -18,32 +18,30 @@
 
 <body>
     <header class="page-header">
-        <nav class="menu-container">
+        <nav class="navigation-menu">
+            <div class="navigation-item">
+                <a>Каталог</a>
+            </div>
+            <div class="navigation-item">
+                <a>Доставка и оплата</a>
+            </div>
+            <div class="navigation-item">
+                <a>Отзывы</a>
+            </div>
             <div class="logo">
                 <a href="">
                     <img src="images/main/logo.svg" width="100" alt="Логотип Botanica">
                 </a>
             </div>
-            <ul class="navigation-list">
-                <li class="navigation-item">
-                    <a>Каталог</a>
-                </li>
-                <li class="navigation-item">
-                    <a>Доставка и оплата</a>
-                </li>
-                <li class="navigation-item">
-                    <a>Отзывы</a>
-                </li>
-                <li class="navigation-item">
-                    <a>Спецпредложения</a>
-                </li>
-                <li class="navigation-item">
-                    <a>Контакты</a>
-                </li>
-                <li class="navigation-item">
-                    <a>Корзина</a>
-                </li>
-            </ul>
+            <div class="navigation-item">
+                <a>Спецпредложения</a>
+            </div>
+            <div class="navigation-item">
+                <a>Контакты</a>
+            </div>
+            <div class="navigation-item">
+                <a>Корзина</a>
+            </div>
         </nav>
     </header>
 
