Настроены якорные ссылки на главной странице

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Botanica. Букеты в Петербурге</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-
     <meta charset="utf-8">
     <meta name="description" content="Букеты в Санкт-Петербурге">
     <meta name="keywords" content="цветы, букеты, Санкт-Петербург, Петербург, цветочные композиции">
@@ -20,27 +19,27 @@
     <header class="page-header">
         <nav class="navigation-menu">
             <div class="navigation-item">
-                <a>Каталог</a>
+                <a class="navigation-link" href="#">Каталог</a>
             </div>
             <div class="navigation-item">
-                <a>Доставка и оплата</a>
+                <a class="navigation-link" href="#">Доставка и оплата</a>
             </div>
             <div class="navigation-item">
-                <a>Отзывы</a>
+                <a class="navigation-link" href="#references">Отзывы</a>
             </div>
             <div class="logo">
-                <a href="">
+                <a href="index.html">
                     <img src="images/main/logo.svg" width="100" alt="Логотип Botanica">
                 </a>
             </div>
             <div class="navigation-item">
-                <a>Спецпредложения</a>
+                <a class="navigation-link" href="#offer">Спецпредложения</a>
             </div>
             <div class="navigation-item">
-                <a>Контакты</a>
+                <a class="navigation-link" href="#contacts">Контакты</a>
             </div>
             <div class="navigation-item">
-                <a>Корзина</a>
+                <a class="navigation-link" href="#">Корзина</a>
             </div>
         </nav>
     </header>
@@ -127,7 +126,7 @@
             </div>
         </section>
 
-        <section class="sale">
+        <section class="sale" id="offer">
             <div class="sale-text">
                 <h2>Cкидка 10% <br>на первый заказ</h2>
                 <p>Если заказываете у нас букет впервые - при оформлении заказа введите промокод "Botanica2021" и получите скидку 10%.</p>
@@ -188,7 +187,7 @@
             </div>
         </section>
 
-        <section class="reference-container">
+        <section class="reference-container" id="references">
             <h2>Отзывы</h2>
             <div class="references">
                 <blockquote class="reference-item">
@@ -237,7 +236,7 @@
     </main>
 
     <footer>
-        <nav class="footer-container">
+        <nav class="footer-container" id="contacts">
             <a class="footer-logo">
                 <img src="images/main/logo2.svg" width="100" alt="Логотип Botanica">
             </a>
@@ -249,13 +248,13 @@
                     <a class="footer-list-item" href="">Доставка и оплата</a>
                 </li>
                 <li>
-                    <a class="footer-list-item" href="">Отзывы</a>
+                    <a class="footer-list-item" href="#references">Отзывы</a>
                 </li>
                 <li>
-                    <a class="footer-list-item" href="">Спецпредложения</a>
+                    <a class="footer-list-item" href="#offer">Спецпредложения</a>
                 </li>
                 <li>
-                    <a class="footer-list-item" href="">Контакты</a>
+                    <a class="footer-list-item" href="#contacts">Контакты</a>
                 </li>
             </ul>
             <div class="icons">
