Сделан футер страницы

--- a/index.html
+++ b/index.html
@@ -248,22 +248,22 @@
             <div class="contact-card">
                 <h2 class="visually-hidden">Контакты</h2>
                 <h3 class="font_title_bold">Мы ждем вас</h3>
-                <ul class="contact-card-items">
-                    <li class="contact-card-item">
+                <ul class="contact-card__info">
+                    <li class="contact-item">
                         <p>Приходите к нам:</p>
                         <p>г.Санкт-Петербург, <br> ул.Большая Конюшенная, 19</p>
                     </li>
-                    <li class="contact-card-item">
+                    <li class="contact-item">
                         <p>Режим работы:</p>
                         <p>Пн-Вск, с 09-00 до 20-00</p>
                     </li>
-                    <li class="contact-card-item">
+                    <li class="contact-item">
                         <p>Позвоните нам:</p>
-                        <a class="contact-card-link" href="tel:+78129834719 ">+7 (812) 983-47-19</a>
+                        <a class="contact-link" href="tel:+78129834719 ">+7 (812) 983-47-19</a>
                     </li>
-                    <li class="contact-card-item">
+                    <li class="contact-item">
                         <p>Напишите нам:</p>
-                        <a class="contact-card-link" href="mailto:info@botanica.ru ">info@botanica.ru</a>
+                        <a class="contact-link" href="mailto:info@botanica.ru ">info@botanica.ru</a>
                     </li>
                 </ul>
             </div>
@@ -275,35 +275,35 @@
     </main>
 
     <footer>
-        <nav class="footer-container " id="contacts ">
-            <a class="footer-logo ">
+        <nav class="footer__container" id="contacts ">
+            <a class="footer-logo">
                 <img src="images/main/logo2.svg " width="100 " alt="Логотип Botanica ">
             </a>
-            <ul class="footer-list ">
+            <ul class="footer-list font_main">
                 <li>
-                    <a class="footer-list-item " href=" ">Каталог</a>
+                    <a class="footer-list__item" href="">Каталог</a>
                 </li>
                 <li>
-                    <a class="footer-list-item " href=" ">Доставка и оплата</a>
+                    <a class="footer-list__item" href="">Доставка и оплата</a>
                 </li>
                 <li>
-                    <a class="footer-list-item " href="#references ">Отзывы</a>
+                    <a class="footer-list__item" href="#references ">Отзывы</a>
                 </li>
                 <li>
-                    <a class="footer-list-item " href="#offer ">Спецпредложения</a>
+                    <a class="footer-list__item" href="#offer ">Спецпредложения</a>
                 </li>
                 <li>
-                    <a class="footer-list-item " href="#contacts ">Контакты</a>
+                    <a class="footer-list__item" href="#contacts ">Контакты</a>
                 </li>
             </ul>
-            <div class="icons ">
-                <a class="footer-icon " href=" ">
+            <div class="icons">
+                <a class="footer-icon" href="">
                     <img src="images/main/footer_instagram_icon.svg " alt="иконка инстаграм ">
                 </a>
-                <a class="footer-icon " href=" ">
+                <a class="footer-icon" href="">
                     <img src="images/main/footer_facebook_icon.svg " alt="иконка фэйсбук ">
                 </a>
-                <a class="footer-icon " href=" ">
+                <a class="footer-icon" href="">
                     <img src="images/main/footer_twitter_icon.svg " alt="иконка твиттер ">
                 </a>
             </div>
